Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39211

Cocoa: event dispatcher sends queued input events to stale windows (causing a crash)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.3.0
    • 5.2.0, 5.2.1, 5.3.0
    • QPA
    • None
    • Mac OS X 10.8.5
    • macOS
    • ac7bf97f51837eecc5e5570d5d62996746f378ed

    Description

      If any input events are sent to a window while QApplication::processEvents(QEventLoop::ExcludeUserInputEvents) is being used, and that window gets destroyed, the queued events will be sent later to the stale window.

      I've been trying to track down this problem in our commercial application for a while, with no luck. Finally I was able to repeat it and track down the cause.

      I am attaching a sample application and a stack trace that show the problem. For the sample application, press the button and move the mouse around the progress dialog. The application will crash after it closes.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dzedsystems Dyami Caliri
            dzedsystems Dyami Caliri
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes