src/plugins/platforms/cocoa/qcocoaeventdispatcher.h
@@ -178,6 +178,8 @@ public:
     void maybeCancelWaitForMoreEvents();
     void ensureNSAppInitialized();
 
+    void removeQueuedUserInputEvents(int nsWinNumber);
+
     QCFSocketNotifier cfSocketNotifier;
     QList<void *> queuedUserInputEvents; // NSEvent *
     CFRunLoopSourceRef postedEventsSource;
