src/plugins/platforms/cocoa/qcocoawindow.mm
@@ -189,7 +189,15 @@ static bool isMouseEvent(NSEvent *ev)
 
 - (void)clearWindow
 {
-    _window = nil;
+    if (_window) {
+        QCocoaEventDispatcher *cocoaEventDispatcher = qobject_cast<QCocoaEventDispatcher *>(QGuiApplication::instance()->eventDispatcher());
+        if (cocoaEventDispatcher) {
+            QCocoaEventDispatcherPrivate *cocoaEventDispatcherPrivate = static_cast<QCocoaEventDispatcherPrivate *>(QObjectPrivate::get(cocoaEventDispatcher));
+            cocoaEventDispatcherPrivate->removeQueuedUserInputEvents([_window windowNumber]);
+        }
+
+        _window = nil;
+    }
 }
 
 - (void)dealloc
